# muscle-autotools

./: .gitignore  HISTORY.txt  Makefile.am  README.html  README.md  autogen.sh  configure.ac  muscle.pc.in  reconf
html/: Beginners Guide.html  Custom Servers.html
micromessage/: MicroMessage.c
minimessage/: MiniMessage.c
regex/: StringMatcher.h
server/: Makefile
ssl_data/: README_SSL.txt
syslog/: SysLog.cpp
test/: Makefile  minichatclient.c  testmicro.cpp  testmini.cpp  testreflectclient.cpp  teststring.cpp
zlib/: ZLibCodec.h
zlib/zlib/: adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.in.h  zutil.c  zutil.h
zlib/zlib/contrib/ada/: buffer_demo.adb  mtest.adb  read.adb  test.adb  zlib-streams.adb  zlib-streams.ads  zlib-thin.adb  zlib-thin.ads  zlib.adb  zlib.ads
zlib/zlib/contrib/iostream2/: zstream.h
zlib/zlib/contrib/minizip/: unzip.c  zip.c
zlib/zlib/projects/visualc6/: example.dsp  minigzip.dsp  zlib.dsp
zlib/zlib/projects/vs2008/zlib/: zlib.vcproj
